--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <div class="container-fluid">
-        <header></header>
+        <header>
+            <img src="img/logo.png" width="1000px" height="200px">
+        </header>
        <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
