--- a/catalogo.html
+++ b/catalogo.html
@@ -21,7 +21,7 @@
        </nav>
        <div>
         <main>
-            <h1>En PepeSport tenemos la ropa perfecta para que puedas hacer deporte con excelente calidad.</h1>
+            <h1>"En PepeSport tenemos la ropa perfecta para que puedas hacer deporte con excelente calidad."</h1>
             <h2>Cualquier consulta que tengas, te dejamos nuestro contacto de Instagram y WhatsApp.</h2>
         <div class="PepeSport"> <img src="img/IMG-20240330-WA0002.jpg"></div>
         <div class="PepeSport"> <img src="img/IMG-20240330-WA0003.jpg"></div>
