implementando galeria fotografica

--- a/catalogo.html
+++ b/catalogo.html
@@ -23,23 +23,23 @@
         <main>
             <h1>"En PepeSport tenemos la ropa perfecta para que puedas hacer deporte con excelente calidad."</h1>
             <h2>Cualquier consulta que tengas, te dejamos nuestro contacto de Instagram y WhatsApp.</h2>
-        <div class="PepeSport"> <img src="img/IMG-20240330-WA0002.jpg"></div>
-        <div class="PepeSport"> <img src="img/IMG-20240330-WA0003.jpg"></div>
-        <div class="PepeSport"> <img src="img/IMG-20240330-WA0004.jpg"></div>
-        <div class="PepeSport"> <img src="img/IMG-20240330-WA0005.jpg"></div>
-        <div class="PepeSport"> <img src="img/IMG-20240330-WA0006.jpg"></div>
-        <div class="PepeSport"> <img src="img/IMG-20240330-WA0007.jpg"></div>
-        <div class="PepeSport"> <img src="img/IMG-20240330-WA0008.jpg"></div>
-        <div class="PepeSport"> <img src="img/IMG-20240330-WA0009.jpg"></div>
-        <div class="PepeSport"> <img src="img/IMG-20240330-WA0010.jpg"></div>
-        <div class="PepeSport"> <img src="img/IMG-20240330-WA0011.jpg"></div>
-        <div class="PepeSport"> <img src="img/IMG-20240330-WA0012.jpg"></div>
-        <div class="PepeSport"> <img src="img/IMG-20240330-WA0013.jpg"></div>
-        <div class="PepeSport"> <img src="img/IMG-20240330-WA0014.jpg"></div>
-        <div class="PepeSport"> <img src="img/IMG-20240330-WA0015.jpg"></div>
-        <div class="PepeSport"> <img src="img/IMG-20240330-WA0016.jpg"></div>
-        <div class="PepeSport"> <img src="img/IMG-20240330-WA0017.jpg"></div>
-        <div class="PepeSport"> <img src="img/IMG-20240330-WA0018.jpg"></div>
+        <div><img class="catalogo" src="img/IMG-20240330-WA0002.jpg"></div>
+        <div><img class="catalogo" src="img/IMG-20240330-WA0003.jpg"></div>
+        <div><img class="catalogo" src="img/IMG-20240330-WA0004.jpg"></div>
+        <div><img class="catalogo" src="img/IMG-20240330-WA0005.jpg"></div>
+        <div><img class="catalogo" src="img/IMG-20240330-WA0006.jpg"></div>
+        <div><img class="catalogo" src="img/IMG-20240330-WA0007.jpg"></div>
+        <div><img class="catalogo" src="img/IMG-20240330-WA0008.jpg"></div>
+        <div><img class="catalogo" src="img/IMG-20240330-WA0009.jpg"></div>
+        <div><img class="catalogo" src="img/IMG-20240330-WA0010.jpg"></div>
+        <div><img class="catalogo" src="img/IMG-20240330-WA0011.jpg"></div>
+        <div><img class="catalogo" src="img/IMG-20240330-WA0012.jpg"></div>
+        <div><img class="catalogo" src="img/IMG-20240330-WA0013.jpg"></div>
+        <div><img class="catalogo" src="img/IMG-20240330-WA0014.jpg"></div>
+        <div><img class="catalogo" src="img/IMG-20240330-WA0015.jpg"></div>
+        <div><img class="catalogo" src="img/IMG-20240330-WA0016.jpg"></div>
+        <div><img class="catalogo" src="img/IMG-20240330-WA0017.jpg"></div>
+        <div><img class="catalogo" src="img/IMG-20240330-WA0018.jpg"></div>
         </main>
         
         
