--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container-fluid">
         <header>
-          <img src="img/logo.png" width="1000px" height="200px">
+          <img src="img/logo.png">
         </header>
        <nav>
           <ul>
@@ -44,7 +44,11 @@
           </div>
         </div>
        </main>
-       <footer></footer>
+       <footer>
+        <a href="#">insta</a>
+        <a href="#">wasap</a>
+        <p>Alvaro Araya y Cesar Clavijo, <br> @Copyrigth Derechos reservados.</p>
+       </footer>
        </div>
        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
    
