--- a/imagen16.html
+++ b/imagen16.html
@@ -6,9 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1></h1>
-    <h2></h2>
-    <p></p>
-    <img src="" alt="">
+    <h1>Polera Primera Capa Lycra Premium Profesional</h1>
+    <h2>Lycra premium de secado rápido, absorbe la humedad y regula temperatura. Frio/Calof. Te proteje del sol por su filtro UV. Posee efecto de compresión que te mantiene firme y seguro.</h2>
+    <p>Esta polera Primera capa pepesport tiene un valor de 15.990 y está en las tallas 14 hasta XL (Sobre XL $1.000 adicional.)</p>
+    <img src="img\POLERA16.jpg" alt="PrimeraCapaPepeSport">
 </body>
 </html>
