--- a/imagen17.html
+++ b/imagen17.html
@@ -6,9 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Short Fast Dry Bolsillos</h1>
-    <h2>Diseño comodo y ventilado, conveniente para deportistas. También recomendado para uso diario en verano</h2>
-    <p></p>
+    <h1>Short Fast Dry Reflectante</h1>
+    <h2>Stretch, suave, cómodo y fresco.Expulsa el sudor y la humedad que se acumula en el interior y seca rápido. Bolsillos con cierre</h2>
+    <p>Este short fast dry tiene un valor de 21.990 y está en las tallas S hasta XXL</p>
     <img src="img\POLERA17.jpg" alt="ShortPepeSport">
 </body>
 </html>
