--- a/imagen18.html
+++ b/imagen18.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Polera algodón</h1>
+    <h2>Polera 100% algodón de tejido liso y suave</h2>
+    <p>Está polera tiene un valor de 10.990 y está en las tallas S hasta XXL</p>
+    <img src="img\POLERA18.jpg" alt="PoleraPepeSport">
 </body>
 </html>
