--- a/imagen19.html
+++ b/imagen19.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Polera Fast Dry con cierre</h1>
+    <h2>La polera fast dry es una prenda diseñada para brindar comodidad. La tecnologia Power Fit presente en la polera ayuda al absorber y evaporar la humedad</h2>
+    <p>Está polera tiene un valor de 16.990, y sus tallas son S hasta XXL </p>
+    <img src="img\POLERA19.jpg" alt="PoleraPepeSport">
 </body>
 </html>
