--- a/imagen20.html
+++ b/imagen20.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Polera Fast Dry Cuello Redondo</h1>
+    <h2>La polera Fast Dry es una prenda diseñada para brindar comodidad. La tecnologia Power Fit presente en la poler ayuda a que la prenda se seque rápidamente al absorber y evaporar la humedad.</h2>
+    <p>Está polera fast dry tiene un valor de 13.990 y sus tallas son XS hasta XXL</p>
+    <img src="img\POLERA20.jpg" alt="PoleraPepeSport">
 </body>
 </html>
