--- a/imagen21.html
+++ b/imagen21.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Calza Corta</h1>
+    <h2>Con tecnologia antitraspirante, de secado rápido que gracias a su microfibra regula la temperatura, ya se frio o calor.</h2>
+    <p>Esta calza corta tiene un valor de 14.500 y sus tallas son 14 hasta XXL<p>
+    <img src="img\POLERA21.jpg" alt="PoleraPepeSport">
 </body>
 </html>
