--- a/imagen22.html
+++ b/imagen22.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
+    <H1>Calza larga adulto</H1>
+    <H2>Lycra premium de secado rápido, absorbe la humedad y regula la temperatura frio/calor. Te proteje del sol por su filtro UV. Posee efecto de compresión que te mantiene firme y seguro.</H2>
+    <P>Esta calza larga adulto tiene un valor de 15.990 y sus tallas son 14 a XL </P>
+    <img src="img\POLERA22.jpg" alt="Calza larga PepeSport">
     
 </body>
 </html>
