--- a/imagen24.html
+++ b/imagen24.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <H1>Poleron Canguro Algodón</H1>
+    <H2>Confeccionado en tejido de algodón suave, con interno afranalado que brinda comodidad en todo momento.</H2>
+    <P>Este poleron de algodón
+    tiene un valor de 20.990 y sus tallas son S hasta XXL
+    </P>
+    <img src="img\POLERA24.jpg" alt="PoleronCanguroPepeSport">
 </body>
 </html>
