--- a/imagen25.html
+++ b/imagen25.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Polera Microperforada</h1>
+    <h2>Modelo ultra ligero y ultra respirable para todo tipo de actividades deportivas</h2>
+    <p>Esta polera tiene un valor de 11.990 y sus tallas son S hasta XXL</p>
+    <img src="img\POLERA25.jpg" alt="Polera Microperforada PepeSport">
 </body>
 </html>
