--- a/imagen12.html
+++ b/imagen12.html
@@ -7,10 +7,8 @@
 </head>
 <body>
     <h1>Polera Microperforada</h1>
-    <h2>Modelo ultra ligero y ultra respirable para todo tipo de actividades deportivas.</h2>
-    <p>El valor de esta polera Microperforada tiene un valor de 11.990 y está en las tallas S hasta XXL</p>
-
-
+    <h2>Polera 100% algodón de tejido liso y suave.</h2>
+    <p>El valor de esta polera  tiene un valor de 10.990 y está en las tallas S hasta XXL</p>
     <img src="img\POLERA12.jpg" alt="PoleraPepeSport">
 </body>
 </html>
