--- a/imagen23.html
+++ b/imagen23.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Polera Primera Capa Cuello Alto Lycra</h1>
+    <h2>Lycra premium de secado rápido, absorbe la humedad y regula la temperatura frio/calor. Te proteje del sol por su filtro UV. Posee efecto de compresión que te mantiene firme y seguro.</h2>
+    <p>Esta calza larga adulto tiene un valor de 16.990 y sus tallas son 14 a XL</p>
+    <img src="img\POLERA23.jpg" alt="PrimeraCapaPepeSport">
 </body>
 </html>
