Implementando galería fotográfica

--- a/imagen19.html
+++ b/imagen19.html
@@ -1,14 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Detalles del Producto</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Polera Fast Dry con cierre</h1>
-    <h2>La polera fast dry es una prenda diseñada para brindar comodidad. La tecnologia Power Fit presente en la polera ayuda al absorber y evaporar la humedad</h2>
-    <p>Está polera tiene un valor de 16.990, y sus tallas son S hasta XXL </p>
-    <img src="img\POLERA19.jpg" alt="PoleraPepeSport">
+  <header>
+    <img src="img/logo.png" alt="logo">
+  </header>
+  <nav>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="quienes_somos.html">Quiénes Somos</a></li>
+        <li class="active"><a href="catalogo.html">Catálogo</a></li>
+    </ul>
+  </nav>
+  <main>
+    <section class="detalles-producto">
+        <div class="imagen-producto">
+      <div>
+        <img src="img\POLERA19.jpg" alt="Producto 10">
+      </div>
+      <div class="informacion-producto">
+        <h2>Polera Fast Dry con cierre</h2>
+        <p>Precio: $16.990</p>
+        <p>La polera fast dry es una prenda diseñada para brindar comodidad. La tecnologia Power Fit presente en la polera ayuda al absorber y evaporar la humedad<br>Colores:Celeste, rojo, azul</p>
+      </div>
+        </div>
+    </section>
+  </main>
+  <footer>
+    <p>Derechos de autor &copy; 2024</p>
+  </footer>
 </body>
 </html>
+
