--- a/imagen21.html
+++ b/imagen21.html
@@ -1,14 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Detalles del Producto</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Calza Corta</h1>
-    <h2>Con tecnologia antitraspirante, de secado rápido que gracias a su microfibra regula la temperatura, ya se frio o calor.</h2>
-    <p>Esta calza corta tiene un valor de 14.500 y sus tallas son 14 hasta XXL<p>
-    <img src="img\POLERA21.jpg" alt="PoleraPepeSport">
+  <header>
+    <img src="img/logo.png" alt="logo">
+  </header>
+  <nav>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="quienes_somos.html">Quiénes Somos</a></li>
+        <li class="active"><a href="catalogo.html">Catálogo</a></li>
+    </ul>
+  </nav>
+  <main>
+    <section class="detalles-producto">
+        <div class="imagen-producto">
+      <div>
+        <img src="img\POLERA21.jpg" alt="Producto 12">
+      </div>
+      <div class="informacion-producto">
+        <h2>Calza Corta</h2>
+        <p>Precio: $14.500</p>
+        <p>Con tecnologia antitraspirante, de secado rápido que gracias a su microfibra regula la temperatura, ya se frio o calor<br>Colores:Celeste, rojo, azul</p>
+      </div>
+        </div>
+    </section>
+  </main>
+  <footer>
+    <p>Derechos de autor &copy; 2024</p>
+  </footer>
 </body>
 </html>
+
+
+
+
+
