--- a/imagen10.html
+++ b/imagen10.html
@@ -1,15 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Detalles del Producto</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Cortaviento Strech</h1>
-    <h2>Gracias a su elasticidad, ligereza y secado rapido, es un aleado ideal para utilizar en cualquier época del año, de forma casual o actividades deportivas</h2>
-    <p>El valor de este cortaviento es de 28.990, y está en las tallas S hasta XXL</p>
-    
-    <img src="img\POLERA10.jpg" alt="PoleraPepeSport">
+  <header>
+    <img src="img/logo.png" alt="logo">
+  </header>
+  <nav>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="quienes_somos.html">Quiénes Somos</a></li>
+        <li class="active"><a href="catalogo.html">Catálogo</a></li>
+    </ul>
+  </nav>
+  <main>
+    <section class="detalles-producto">
+        <div class="imagen-producto">
+      <div>
+        <img src="img\POLERA10.jpg" alt="Producto 1">
+      </div>
+      <div class="informacion-producto">
+        <h2>Cortaviento Strech</h2>
+        <p>Precio: $28.990</p>
+        <p>Gracias a su elasticidad, ligereza y secado rapido, es un aleado ideal para utilizar en cualquier época del año, de forma casual o actividades deportivas<br>Colores:Celeste, rojo, azul</p>
+      </div>
+        </div>
+    </section>
+  </main>
+  <footer>
+    <p>Derechos de autor &copy; 2024</p>
+  </footer>
 </body>
 </html>
+
+
+
+
+
