--- a/imagen11.html
+++ b/imagen11.html
@@ -1,17 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Detalles del Producto</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <main>
-     <h1>Prenda de Fast Dry manga larga</h1>
-     <h2>La polera fast dry es una prenda que esta diseñada para brindar comodidad. La tecnologia Power Fit presente en la polera ayuda a que la prenda se seque rápidamente al absorber y evaporar la humedad</h2>
-     <p>El valor de esta polera Fast Dry Manga Larga es de 15.990, y está en las tallas S hasta XXL</p>
-    <img src="img\POLERA11.jpg" alt="PoleraPepeSport"> 
-    
-    </main>
+  <header>
+    <img src="img/logo.png" alt="logo">
+  </header>
+  <nav>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="quienes_somos.html">Quiénes Somos</a></li>
+        <li class="active"><a href="catalogo.html">Catálogo</a></li>
+    </ul>
+  </nav>
+  <main>
+    <section class="detalles-producto">
+        <div class="imagen-producto">
+      <div>
+        <img src="img\POLERA11.jpg" alt="Producto 2">
+      </div>
+      <div class="informacion-producto">
+        <h2>Prenda de Fast Dry manga larga</h2>
+        <p>Precio: 15.990</p>
+        <p>La polera fast dry es una prenda que esta diseñada para brindar comodidad. La tecnologia Power Fit presente en la polera ayuda a que la prenda se seque rápidamente al absorber y evaporar la humedad<br>Colores:Celeste, rojo, azul</p>
+      </div>
+        </div>
+    </section>
+  </main>
+  <footer>
+    <p>Derechos de autor &copy; 2024</p>
+  </footer>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
