--- a/imagen15.html
+++ b/imagen15.html
@@ -1,14 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Detalles del Producto</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Polera Fast Dry</h1>
-    <h2>La polera Fast Dry es una prenda diseñada para brindar comodidad. La tecnologia Power Fit presente en la polera ayuda a que la prenda se seque rápidamente al absorber y evaporar la humedad.</h2>
-    <p>Esta polera Fast Dry tiene un valor de 13.990, está en las tallas S hasta XXL</p>
-    <img src="img\POLERA15.jpg" alt="PoleraPepeSport">
+  <header>
+    <img src="img/logo.png" alt="logo">
+  </header>
+  <nav>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="quienes_somos.html">Quiénes Somos</a></li>
+        <li class="active"><a href="catalogo.html">Catálogo</a></li>
+    </ul>
+  </nav>
+  <main>
+    <section class="detalles-producto">
+        <div class="imagen-producto">
+      <div>
+        <img src="img\POLERA15.jpg" alt="Producto 6">
+      </div>
+      <div class="informacion-producto">
+        <h2>Polera Fast Dry</h2>
+        <p>Precio: $13.990</p>
+        <p>La polera Fast Dry es una prenda diseñada para brindar comodidad. La tecnologia Power Fit presente en la polera ayuda a que la prenda se seque rápidamente al absorber y evaporar la humedad.<br>Colores:Celeste, rojo, azul</p>
+      </div>
+        </div>
+    </section>
+  </main>
+  <footer>
+    <p>Derechos de autor &copy; 2024</p>
+  </footer>
 </body>
 </html>
+
