--- a/imagen17.html
+++ b/imagen17.html
@@ -1,14 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Detalles del Producto</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Short Fast Dry Reflectante</h1>
-    <h2>Stretch, suave, cómodo y fresco.Expulsa el sudor y la humedad que se acumula en el interior y seca rápido. Bolsillos con cierre</h2>
-    <p>Este short fast dry tiene un valor de 21.990 y está en las tallas S hasta XXL</p>
-    <img src="img\POLERA17.jpg" alt="ShortPepeSport">
+  <header>
+    <img src="img/logo.png" alt="logo">
+  </header>
+  <nav>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="quienes_somos.html">Quiénes Somos</a></li>
+        <li class="active"><a href="catalogo.html">Catálogo</a></li>
+    </ul>
+  </nav>
+  <main>
+    <section class="detalles-producto">
+        <div class="imagen-producto">
+      <div>
+        <img src="img\POLERA17.jpg" alt="Producto 8">
+      </div>
+      <div class="informacion-producto">
+        <h2>Short Fast Dry Reflectante</h2>
+        <p>Precio: $21.990</p>
+        <p>Stretch, suave, cómodo y fresco.Expulsa el sudor y la humedad que se acumula en el interior y seca rápido. Bolsillos con cierre<br>Colores:Celeste, rojo, azul</p>
+      </div>
+        </div>
+    </section>
+  </main>
+  <footer>
+    <p>Derechos de autor &copy; 2024</p>
+  </footer>
 </body>
 </html>
+
