--- a/imagen18.html
+++ b/imagen18.html
@@ -1,14 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Detalles del Producto</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Polera algodón</h1>
-    <h2>Polera 100% algodón de tejido liso y suave</h2>
-    <p>Está polera tiene un valor de 10.990 y está en las tallas S hasta XXL</p>
-    <img src="img\POLERA18.jpg" alt="PoleraPepeSport">
+  <header>
+    <img src="img/logo.png" alt="logo">
+  </header>
+  <nav>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="quienes_somos.html">Quiénes Somos</a></li>
+        <li class="active"><a href="catalogo.html">Catálogo</a></li>
+    </ul>
+  </nav>
+  <main>
+    <section class="detalles-producto">
+        <div class="imagen-producto">
+      <div>
+        <img src="img\POLERA18.jpg" alt="Producto 9">
+      </div>
+      <div class="informacion-producto">
+        <h2>Polera algodón</h2>
+        <p>Precio: $10.990</p>
+        <p>Polera 100% algodón de tejido liso y suave<br>Colores:Celeste, rojo, azul</p><br>Colores:Celeste, rojo, azul</p>
+      </div>
+        </div>
+    </section>
+  </main>
+  <footer>
+    <p>Derechos de autor &copy; 2024</p>
+  </footer>
 </body>
 </html>
+
+
