--- a/imagen22.html
+++ b/imagen22.html
@@ -1,15 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Detalles del Producto</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <H1>Calza larga adulto</H1>
-    <H2>Lycra premium de secado rápido, absorbe la humedad y regula la temperatura frio/calor. Te proteje del sol por su filtro UV. Posee efecto de compresión que te mantiene firme y seguro.</H2>
-    <P>Esta calza larga adulto tiene un valor de 15.990 y sus tallas son 14 a XL </P>
-    <img src="img\POLERA22.jpg" alt="Calza larga PepeSport">
-    
+  <header>
+    <img src="img/logo.png" alt="logo">
+  </header>
+  <nav>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="quienes_somos.html">Quiénes Somos</a></li>
+        <li class="active"><a href="catalogo.html">Catálogo</a></li>
+    </ul>
+  </nav>
+  <main>
+    <section class="detalles-producto">
+        <div class="imagen-producto">
+      <div>
+        <img src="img\POLERA22.jpg" alt="Producto 13">
+      </div>
+      <div class="informacion-producto">
+        <h2>Calza larga adulto</h2>
+        <p>Precio: $ 15.990</p>
+        <p>Lycra premium de secado rápido, absorbe la humedad y regula la temperatura frio/calor. Te proteje del sol por su filtro UV. Posee efecto de compresión que te mantiene firme y seguro.<br>Colores:Celeste, rojo, azul</p>
+      </div>
+        </div>
+    </section>
+  </main>
+  <footer>
+    <p>Derechos de autor &copy; 2024</p>
+  </footer>
 </body>
 </html>
+
