--- a/imagen24.html
+++ b/imagen24.html
@@ -1,16 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Detalles del Producto</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <H1>Poleron Canguro Algodón</H1>
-    <H2>Confeccionado en tejido de algodón suave, con interno afranalado que brinda comodidad en todo momento.</H2>
-    <P>Este poleron de algodón
-    tiene un valor de 20.990 y sus tallas son S hasta XXL
-    </P>
-    <img src="img\POLERA24.jpg" alt="PoleronCanguroPepeSport">
+  <header>
+    <img src="img/logo.png" alt="logo">
+  </header>
+  <nav>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="quienes_somos.html">Quiénes Somos</a></li>
+        <li class="active"><a href="catalogo.html">Catálogo</a></li>
+    </ul>
+  </nav>
+  <main>
+    <section class="detalles-producto">
+        <div class="imagen-producto">
+      <div>
+        <img src="img\POLERA24.jpg" alt="Producto 15">
+      </div>
+      <div class="informacion-producto">
+        <h2>Poleron Canguro Algodón</h2>
+        <p>Precio: $20.990</p>
+        <p>Confeccionado en tejido de algodón suave, con interno afranalado que brinda comodidad en todo momento.<br>Colores:Celeste, rojo, azul</p>
+      </div>
+        </div>
+    </section>
+  </main>
+  <footer>
+    <p>Derechos de autor &copy; 2024</p>
+  </footer>
 </body>
 </html>
+
