--- a/imagen25.html
+++ b/imagen25.html
@@ -1,14 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Detalles del Producto</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Polera Microperforada</h1>
-    <h2>Modelo ultra ligero y ultra respirable para todo tipo de actividades deportivas</h2>
-    <p>Esta polera tiene un valor de 11.990 y sus tallas son S hasta XXL</p>
-    <img src="img\POLERA25.jpg" alt="Polera Microperforada PepeSport">
+  <header>
+    <img src="img/logo.png" alt="logo">
+  </header>
+  <nav>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="quienes_somos.html">Quiénes Somos</a></li>
+        <li class="active"><a href="catalogo.html">Catálogo</a></li>
+    </ul>
+  </nav>
+  <main>
+    <section class="detalles-producto">
+        <div class="imagen-producto">
+      <div>
+        <img src="img\POLERA25.jpg" alt="Producto 16">
+      </div>
+      <div class="informacion-producto">
+        <h2>Polera Microperforada</h2>
+        <p>Precio: $11.990</p>
+        <p>>Modelo ultra ligero y ultra respirable para todo tipo de actividades deportivas<br>Colores:Celeste, rojo, azul</p>
+   </div>
+        </div>
+    </section>
+  </main>
+  <footer>
+    <p>Derechos de autor &copy; 2024</p>
+  </footer>
 </body>
 </html>
+
+
+
+
