--- a/imagen29.html
+++ b/imagen29.html
@@ -1,14 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Detalles del Producto</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Polera primera capa cuello alto lycra niño</h1>
-    <h2>Lycra premium de secado rápido, absorbe la humedad y regula la temperatura frio/calor. Te proteje del sol por su filtro UV. Posee efecto de compresión que te mantiene firme y seguro</h2>
-    <p>Esta polera primera capa lycra cuello alto niño tiene un valor de 15.990, sus tallas son de 4 a 12</p>
-    <img src="img\Ropa niño 4.jpg" alt="PepeSport">
+  <header>
+    <img src="img/logo.png" alt="logo">
+  </header>
+  <nav>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="quienes_somos.html">Quiénes Somos</a></li>
+        <li class="active"><a href="catalogo.html">Catálogo</a></li>
+    </ul>
+  </nav>
+  <main>
+    <section class="detalles-producto">
+        <div class="imagen-producto">
+      <div>
+        <img src="img\Ropa niño 4.jpg" alt="Producto 20">
+      </div>
+      <div class="informacion-producto">
+        <h2>Polera primera capa cuello alto lycra niño</h2>
+        <p>Precio: $15.990</p>
+        <p>Lycra premium de secado rápido, absorbe la humedad y regula la temperatura frio/calor. Te proteje del sol por su filtro UV. Posee efecto de compresión que te mantiene firme y seguro<br>Colores:Celeste, rojo, azul</p>
+      </div>
+        </div>
+    </section>
+  </main>
+  <footer>
+    <p>Derechos de autor &copy; 2024</p>
+  </footer>
 </body>
 </html>
