Implementando galería fotográfica

--- a/catalogo.html
+++ b/catalogo.html
@@ -51,6 +51,8 @@
             <div><a href="imagen27.html"><img src="img/Ropa Niño 2.jpg" class="imagen" alt="Prenda PepeSport"></a><p>Calza larga Lycra niño <br>14.990</p></div>
             <div><a href="imagen28.html"><img src="img/Ropa niño 3.jpg" class="imagen" alt="Prenda PepeSport"></a><p>Calza corta lycra niño <br>13.500</p></div>
             <div><a href="imagen29.html"><img src="img/Ropa niño 4.jpg" class="imagen" alt="Prenda PepeSport"></a><p>Polera primera capa cuello alto lycra niño <br>15.990</p></div>
+            <div><a href="imagen30.html"><img src="img/Vestuario Femenino.jpg" class="imagen" alt="Prenda PepeSport"></a><p>Vestuario femenino <br>9.990 hasta 64.990</p></div>
+            <div><a href="imagen31.html"><img src="img/Micropolar hombre.jpg" class="imagen" alt="Prenda PepeSport"></a><p>Micropolar Medio Cierre <br>23.990</p></div>
         </div>
            
         </main>
