--- a/catalogo.html
+++ b/catalogo.html
@@ -6,11 +6,12 @@
     <title>PepeSport</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/reset.css">
 </head>
 <body>
-    <div class="container-fluid">
+    <div class="wrapper">
     <header>
-        <img src="img/logo.png" width="1000px" height="200px">
+        <img src="img/logo.png">
     </header>
        <nav>
             <ul>
