--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PepeSport</title>
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    
 </head>
 <body>
-    <div class="container-fluid">
+    <div class="wrapper">
         <header>
           <img src="img/logo.png">
         </header>
@@ -20,17 +22,21 @@
           </ul>
        </nav>
        <main>
+        <div class="home">
+        <div class="logo">
+          <img src="img/logo_azul.png">
+        </div>
         <div class="carusel">
         <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="img/flayer_primeras_capas.png" class="d-block w-100" alt="...">
+                <img src="img/POLERA10.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="img/cortaviento.png" class="d-block w-100" alt="...">
+                <img src="img/POLERA11.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="img/polerones_canguro.png" class="d-block w-100" alt="...">
+                <img src="img/POLERA12.jpg" class="d-block w-100" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
@@ -43,10 +49,25 @@
             </button>
           </div>
         </div>
+        </div>
+        
+          <h2 class="famo">Profesionales con nuestros productos</h2>
+          <div class="famoso">
+          <div>
+            <img src="img/catalina.jpeg" alt="">
+            <img src="img/cristian.jpeg" alt="">
+            <img src="img/jonathan.jpeg" alt="">
+          </div>
+          <div>
+            <img src="img/nelson.jpeg" alt="">
+            <img src="img/omar.jpeg" alt="">
+            <img src="img/roberto.jpeg" alt="">
+          </div>
+        </div>
        </main>
        <footer>
-        <a href="#">insta</a>
-        <a href="#">wasap</a>
+        <a href="https://www.instagram.com/pepesport.oficial/" target="_blank"><img src="img/insta.png">@pepesport.oficial</a>
+        <a href="https://wa.me/+56936681549" target="_blank"><img src="img/wasap.png">+56936681549</a>
         <p>Alvaro Araya y Cesar Clavijo, <br> @Copyrigth Derechos reservados.</p>
        </footer>
        </div>
