--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -35,7 +35,11 @@
                 <video src="Video PepeSport/Video PepeSport.mp4"type = "video/mp4" controls></video>
              </div>
        </main>
-       <footer></footer>
+       <footer>
+        <a href="https://www.instagram.com/pepesport.oficial/" target="_blank"><img src="img/insta.png">@pepesport.oficial</a>
+        <a href="https://wa.me/+56936681549" target="_blank"><img src="img/wasap.png">+56936681549</a>
+        <p>Alvaro Araya y Cesar Clavijo, <br> @Copyrigth Derechos reservados.</p>
+       </footer>
        </div>
        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
    
