--- a/imagen22.html
+++ b/imagen22.html
@@ -36,8 +36,10 @@
     </section>
   </main>
   <footer>
-    <a href="https://www.instagram.com/pepesport.oficial/" target="_blank"><img src="img/insta.png">@pepesport.oficial</a>
-    <a href="https://wa.me/+56936681549" target="_blank"><img src="img/wasap.png">+56936681549</a>
+    <h5>Nuestras redes sociales</h5>
+    <h6>haga click en ellas</h6>
+    <a class="insta" href="https://www.instagram.com/pepesport.oficial/" target="_blank"><img src="img/insta.png">@pepesport.oficial</a>
+    <a class="wasap" href="https://wa.me/+56936681549" target="_blank"><img src="img/wasap.png">+56936681549</a>
     <p>Alvaro Araya y Cesar Clavijo, <br> @Copyrigth Derechos reservados.</p>
   </footer>
 </body>
