--- a/catalogo.html
+++ b/catalogo.html
@@ -24,8 +24,9 @@
        </nav>
         <main>
             <div class="titulo">
-            <h1>"En PepeSport tenemos la ropa perfecta para que puedas hacer deporte con excelente calidad."</h1>
-            <p>Cualquier consulta que tengas, te dejamos nuestro contacto de Instagram y WhatsApp</p>
+            <h3>"En PepeSport tenemos la ropa perfecta para que puedas hacer deporte con excelente calidad."</h3>
+            <p>Aqui hay algunos de nuestros si quieres ver mas <br>de nuestros productos descarga nuestro catalogo</p>
+            <a href="pdf/Catálogo de productos Pepe Sport 2024.pdf" download>CLICK AQUI para descargar PDF</a>
             </div> 
             <div class="galeria"> 
                 <a href="imagen11.html"><img src="img/POLERA11.jpg"></a>
