--- a/catalogo.html
+++ b/catalogo.html
@@ -25,7 +25,7 @@
         <main>
             <div class="titulo">
             <h3>"En PepeSport tenemos la ropa perfecta para que puedas hacer deporte con excelente calidad."</h3>
-            <p>Aqui hay algunos de nuestros si quieres ver mas <br>de nuestros productos descarga nuestro catalogo</p>
+            <p>Aqui hay algunos de nuestros productos si quieres ver mas <br>productos descarga nuestro catalogo</p>
             <a href="pdf/Catálogo de productos Pepe Sport 2024.pdf" download>CLICK AQUI para descargar PDF</a>
             </div> 
             <div class="galeria"> 
