--- a/catalogo.html
+++ b/catalogo.html
@@ -26,7 +26,9 @@
             <div class="titulo">
             <h3>"En PepeSport tenemos la ropa perfecta para que puedas hacer deporte con excelente calidad."</h3>
             <p>Aqui hay algunos de nuestros productos si quieres ver mas <br>productos descarga nuestro catalogo</p>
-            <a href="pdf/Catálogo de productos Pepe Sport 2024.pdf" download>CLICK AQUI para descargar PDF</a>
+            <a href="pdf/Catálogo de productos Pepe Sport 2024.pdf" download>CLICK AQUI para 
+            descargar PDF</a> | 
+            <a href="DanosTuOpinion.html"  target="_blank">Danos tu opinión sobre tu experiencia en PepeSport</a>
             </div> 
             <div class="galeria"> 
                 <a href="imagen11.html"><img src="img/POLERA11.jpg"></a>
